<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!--标题-->
    <TextView
        android:textSize="26sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/menu_custom_view_dialog"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--空行-->
    <TextView
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--输入SSID-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AddWifiDialogLinearLayoutTheme">

        <TextView
            android:text="@string/menu_custom_view_dialog_ssid"
            android:theme="@style/AddWifiDialogTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/menu_add_network_ssid_EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:theme="@style/AddWifiDialogEditTextTheme"/>
    </LinearLayout>

    <!--空行-->
    <TextView
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--输入密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/AddWifiDialogLinearLayoutTheme">
        <TextView
            android:text="@string/menu_custom_view_dialog_password"
            android:theme="@style/AddWifiDialogTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/menu_add_network_password_EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:theme="@style/AddWifiDialogEditTextTheme"/>
    </LinearLayout>

    <!--空行-->
    <TextView
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--加密方式选择-->
    <LinearLayout
        android:theme="@style/AddWifiDialogLinearLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/menu_custom_view_dialog_security"
            android:theme="@style/AddWifiDialogTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:entries="@array/ctype"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:theme="@style/AddWifiDialogEditTextTheme"
            android:layout_weight="1"
            android:id="@+id/menu_custom_view_dialog_security_spinner"/>
    </LinearLayout>

    <TextView
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
